# youtube-to-html-summary

./: .gitignore  README.md  api.py  database.py  main.py  pyproject.toml  requirements.txt  start_server.py  tasks.json  youtube_summary.db
static/: index.html
